--- a/ver1_index.html
+++ b/ver1_index.html
@@ -22,9 +22,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.1/dc.js"></script>
 -->
 
-<script type="text/javascript" src="https://dc-js.github.io/dc.js/js/d3.js"></script>
-<script type="text/javascript" src="https://dc-js.github.io/dc.js/js/crossfilter.js"></script>
-<script type="text/javascript" src="https://dc-js.github.io/dc.js/js/dc.js"></script>
+<script type="text/javascript" src="js/d3.js"></script>
+<script type="text/javascript" src="js/crossfilter.js"></script>
+<script type="text/javascript" src="js/dc.js"></script>
 
 <script src="https://d3js.org/d3-array.v1.min.js"></script>
 <script src="https://d3js.org/d3-geo.v1.min.js"></script>
